--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -26,7 +26,7 @@ h3 {
 }
 p {
     font-family: "Noto Serif TC", serif;
-    font-size: 1rem;
+    font-size: 1.4rem;//1rem
     font-weight: 400;
     font-style: normal;
 }
@@ -41,14 +41,15 @@ small {
     box-sizing: border-box;
 }
 a{
+    font-size: 1.5rem;
     &:hover{
         color: $color-desert;
     }
 }
 /* Set text color and font for the whole document */
 body {
-    width: 100vw;
-    min-width: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
     height: auto;
     background-color: #c8dbe1;
     color: #555;
@@ -98,7 +99,7 @@ header {
     a {
         padding-bottom: 5px;
         &:hover {
-            border-bottom: #757575 solid 2px;
+            border-bottom: $color-desert solid 2px;
         }
     }
 }
@@ -106,18 +107,21 @@ main{
     flex: 1;
     width: 100%;
 
+    
 }
+
 footer{
     width: 100%;
-    height: 150px;
+    //height: 150px;
     background-color: $background-color-beach-white-s;
 
     display: grid;
-    grid-template-columns: repeat(10,minmax(1,0));
-    grid-auto-rows: auto;
+    grid-template-columns: repeat(3,minmax(150px,800px));
+    grid-template-rows: repeat(3,1fr);
     justify-items: center;
     align-items: center;
 
+    padding: 30px;
     padding-bottom: 20px;
     img{
         width: 50%;
@@ -150,6 +154,7 @@ section {
     align-items: center;
     justify-content: center;
 }
+
 /* 按鈕樣式 */
 .button {
     width: fit-content;
@@ -170,7 +175,59 @@ section {
     }
 }
 /* 首頁主內容 */
+@keyframes scaleFloat{
+    0%{
+        scale: inherit;
+        
+    }
+    50%{
+        scale: 180%;
+        transform: translate(2vw,4vh);
+    }
 
+    100%{
+        scale: inherit;
+    }
+}
+@keyframes scaleFloatLeft{
+    0%{
+        scale: inherit;
+        
+    }
+    50%{
+        scale: 180%;
+        transform: translate(-2vw,3vh);
+    }
+
+    100%{
+        scale: inherit;
+    }
+}
+@keyframes scaleChange{
+    0%{
+        scale: inherit;
+        
+    }
+    50%{
+        scale: 120%;
+      
+    }
+    100%{
+        scale: inherit;
+    }}
+@keyframes scaleRotate{
+    0%{
+        scale: inherit;
+        
+    }
+    50%{
+        transform: rotate3d(0,-10,10,-1deg);
+    }
+    100%{
+        scale: inherit;
+        
+    }
+}
 /* banner */
 .index-banner {
     height: 70vh;
@@ -179,30 +236,51 @@ section {
     /* 定位裝飾 */
     position: relative;
     /* 增加裝飾 */
-    background-image: url("../../images/decorate-banner.png"), url("../../images/decorate-banner02.png");
-    background-size:
-        72px 102px,
-        45px 45px;
-    background-repeat: no-repeat, no-repeat;
-    background-position:
-        left top,
-        10vw 58vh;
-
-    img {
+    //background-image: url("../../images/decorate-banner.png"), url("../../images/decorate-banner02.png");
+    //background-size:
+        // 72px 102px,
+        // 45px 45px;
+    //background-repeat: no-repeat, no-repeat;
+    // background-position:
+    //     left top,
+    //     30vw 8vh;
+    .decorate-banner{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: fit-content;
+        animation: scaleChange 5s 5s infinite;
+    }
+    .decorate-banner2{
+        position: absolute;
+        left: 18vw;
+        bottom: 1vh;
+        width: fit-content;
+        animation: scaleFloatLeft 5s 3s infinite;
+    }
+    .decorate-banner3{
+        position: absolute;
+        left: 35vw;
+        top: 10vh;
+        width: fit-content;
+        animation: scaleFloat 5s 4s infinite;
+    }
+    .banner {
         /* {`Yihui’s 個人網站`}方塊*/
         width: 50vw;
+        animation: scaleRotate 5s 0s infinite;
     }
 
     &::before {
         /* 裝飾banner */
         position: absolute;
         content: url("../../images/decorate-banner03.png");
-        display: block;
-        width: 63px;
-        height: 63px;
 
-        right: 38vw;
-        bottom: 1vh;
+        right: 20vw;
+        bottom: 8vh;
+
+        animation: scaleFloat 5s 2s infinite;
+
     }
 
     &::after {
@@ -215,10 +293,25 @@ section {
 
         right: 0;
         top: 15vh;
+
+        animation: scaleChange 5s 3s infinite;
     }
 }
 
 /* 首頁aboutMe容器 */
+@keyframes CloudFloat{
+    0%{
+       transform: translate(0vw);
+        
+    }
+    50%{
+        transform: translate(10vw);
+    }
+
+    100%{
+        transform: translate(12vw);
+    }
+}
 .index-aboutMe {
     height: auto;
     margin-bottom: 10vh;
@@ -247,9 +340,11 @@ section {
             display: block;
             width: auto;
             height: auto;
-            left: 10vw;
-            bottom: -35vh;
+            left: 12vw;
+            bottom: -25vh;
             z-index: -1;
+
+            animation: CloudFloat 120s 0s 1;
         }
         &::after {
             position: absolute;
@@ -277,11 +372,13 @@ section {
                 position: absolute;
                 content: url(../../images/decorate-aboutMe01.png);
                 display: block;
-                width: auto;
+                width: 50%;
                 height: auto;
                 left: -130px;
                 bottom: -65px;
                 z-index: -1;
+
+                animation: CloudFloat 150s 0s 1;
             }
         }
         img {
@@ -294,12 +391,12 @@ section {
 /* 首頁-portfolio容器:標題+div */
 .index-portfolio {
     height: auto;
-    gap: 15px;
+    gap: 10vh;
 }
 /* 裝介紹作品集的容器(img+div) */
 .index-portfolioInfo {
     width: 100vw;
-    height: 50vw;
+    height: 60vh;
     background-image: url(../../images/index-portfolio.png);
     background-size: 85vw 28vw;
     background-repeat: no-repeat;
@@ -309,7 +406,7 @@ section {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 10vw;
+    gap: 5vw;
 
     /* 書 */
     img {
@@ -352,6 +449,7 @@ section {
     height: auto;
     gap: 50px;
     margin-bottom: 10px;
+    margin-top: 5vh;
 }
 /*  */
 .index-noteContainer {
@@ -364,14 +462,13 @@ section {
     gap: 50px;
     overflow: hidden;
 }
-/*  */
+/* 簡略文章元件 */
 .simple-learnNoteComponent {
-    width: 300px;
+    width: auto;
+    min-width: 300px;
     min-height: 185px;
-    background-image: url(../../images/simple_learnNote.png);
-    background-repeat: no-repeat; /* 防止背景圖片重複 */
-    background-size: cover; /* 確保背景圖片填滿整個容器 */
-    background-position: center center; /* 讓背景圖片在容器中置中 */
+    height: fit-content;
+   
     color: $font-color-white-s;
 
     flex: 1 0 auto;
@@ -379,26 +476,44 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    row-gap: 20px;
 
     position: relative;
-    img{
-        
-    }
+    background-image: url(../../images/simple_learnNote.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    // &::after{
+    //     content: url(../../images/simple_learnNote.png);
+    //     width: 300px;
+    //     z-index: -1;
+    //     position: absolute;
+    // }
+
     h3 {
     }
     .tag-card {
         /* 相對位置 */
         position: absolute;
-        right: 140px;
-        bottom: 30px;
+        right: 150px;
+        bottom: 40px;
         //style
         color: $font-color-deepBlue;
+        @media (max-width:1440px) {
+            right: 140px;
+            bottom: 40px;
+        }
+        @media (min-width:2560px) {
+            right: 290px;
+            bottom: 40px;
+        }
+
+       
     }
+
 }
 
-/*  */
+/* 首頁-聯繫我 */
 .index-contact {
-    width: 100%;
 
 
     display: flex;
@@ -408,27 +523,28 @@ section {
 
 
     position: relative;
-    // &::before{
-    //     content: url(../../images/1920wave.png);
+    &::before{
+        content: url(../../images/1920wave.png);
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: -140px;
+        left: 0;
+        z-index: -1;
+
+    }
+
+    // .bg-wave{
     //     position: absolute;
     //     width: 100vw;
     //     height: auto;
-    //     top: -200px;
+    //     top: -100px;
     //     z-index: -1;
-
     // }
-
-    .bg-wave{
-        position: absolute;
-        width: 100vw;
-        height: auto;
-        top: -100px;
-        z-index: -1;
-    }
     .contact-top {
         width:30%;
         height: 250px;
-        line-height: 380px;
+        line-height: 290px;
         h2{
            width: fit-content;
            margin: 0 auto;
@@ -437,6 +553,7 @@ section {
     .contact-bottom{
         width: 100%;
         height: 150px;
+        //background-color: $color-beach;
        
         display: flex;
         flex-direction: row;
@@ -448,7 +565,7 @@ section {
     &::before{
         content: url(../../images/beach.png);
         position: absolute;
-        width: 100%;
+        width: auto;
         height: 200px;
         top: -30px;
         z-index: -2;
@@ -458,5 +575,127 @@ section {
             width:50px;
             height: 50px;
         }
+    }
+}
+
+/* 通用在作品集和學習紀錄 */
+.blogArea{
+    display: flex;
+    flex-direction: row;
+}
+.section-intro{/*  */
+    max-width: 285px;
+    width: 25%;
+    min-height: 77vh;
+    //height:100;
+    background: linear-gradient(195deg,#FFEDCB 0%,#FFF5E9 15%,#FFD1B0 56%,#FFEDD0 90%);
+    box-shadow: inset 1px 0 3px 0px $box-shadow ;
+    position: sticky;
+    left: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    padding: 40px;
+    padding-top: 10vh;
+    img{
+        width: 118px;
+    }
+    p{
+        line-height: 45px;
+    }
+
+
+}
+.section-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .btnContainer{
+        width: fit-content;
+        height: fit-content;
+
+        display: flex;
+        flex-direction: row;
+        
+        button{
+            width: 180px;
+            height: 60px;
+            background-color: $color-beach;
+            opacity: 0.8;
+            border-color: $color-beach-white-s;
+            //border-right: 3px solid $color-beach-white-s;
+            //box-shadow: inset -1px 0 3px 4px $box-shadow ;
+            border-radius: 10px;
+            &:hover{
+                opacity: 1;
+            }
+            &:active{
+                background-color: $color-desert;
+            }
+        }
+    }
+    .contentContainer{
+        width: 100%;
+        height: 100%;
+        background-color: $background-color-beach-s;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 10%;
+        padding: 5vw 10vw;
+
+        .portfolio-file{
+            width: 45%;
+            
+        }
+
+        .tag-card {
+            /* 相對位置 */
+            position:sticky;
+            right: 125px;
+            bottom: 20px;
+            //style
+            color: $font-color-deepBlue;
+            @media (max-width:1440px) {
+                right: 120px;
+                bottom: 40px;
+            }
+            @media (min-width:2560px) {
+                right: 120px;
+                bottom: 40px;
+            }
+    
+           
+        }
+    }
+
+}
+
+.portfolio-file{
+    flex: 0 1 auto;
+    min-height: 165px;
+    height: 25vw;
+    background: url(../../images/portfolio-file.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 2vw;
+    justify-content:center;
+    align-items: center;
+    
+    h3{
+        line-height: 3rem;
+        //margin-bottom: 20px;
+        
+    }
+    img{
+        width: 75%;
     }
 }
