--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* UTF-8編碼確保文件中的中文字符或其他ASCII字符能夠被正確解析和顯示 */
 /* 導入字體 */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain) */
@@ -158,17 +158,19 @@ a {
 
 /* 字大小 */
 h1 {
-  font-family: "SimSun", "Noto Serif TC", serif;
+  font-family: "Noto Serif TC", serif;
   font-size: 3.3rem;
   font-weight: 900;
   font-style: normal;
+  letter-spacing: 0.1rem;
 }
 
 h2 {
-  font-family: "SimSun", "Noto Serif TC", serif;
+  font-family: "Noto Serif TC", serif;
   font-size: 2.25rem;
   font-weight: 700;
   font-style: normal;
+  letter-spacing: 0.1rem;
 }
 
 h3 {
@@ -176,13 +178,15 @@ h3 {
   font-size: 1.5rem;
   font-weight: 600;
   font-style: normal;
+  letter-spacing: 0.1rem;
 }
 
 p {
   font-family: "Noto Serif TC", serif;
-  font-size: 1.2rem;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 500;
   font-style: normal;
+  letter-spacing: 0.1rem;
 }
 
 small {
@@ -190,6 +194,7 @@ small {
   font-size: 0.75rem;
   font-weight: 200;
   font-style: normal;
+  letter-spacing: 0.1rem;
 }
 
 /* Global */
@@ -199,6 +204,9 @@ small {
 
 a {
   font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  color: rgb(12, 90, 103);
 }
 a:hover {
   color: rgb(189, 170, 156);
@@ -210,9 +218,9 @@ body {
   width: 100vw;
   min-height: 1080px;
   height: auto;
-  background-color: #c8dbe1;
+  background-image: linear-gradient(rgba(172, 211, 222, 0.25) 15%, rgba(152, 198, 205, 0.3) 35%, rgba(186, 211, 213, 0.53) 60%, rgba(144, 192, 198, 0.45) 80%, rgba(242, 237, 232, 0.65) 100%);
   color: #555;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Noto Serif TC", "SimSun", "Open Sans", "Helvetica Neue", sans-serif, "蘋方-繁", "PingFang TC", "黑體-繁", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans TC";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Noto Serif TC", "Open Sans", "Helvetica Neue", sans-serif, "蘋方-繁", "PingFang TC", "黑體-繁", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans TC";
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -246,7 +254,7 @@ header {
   height: 50px;
   border-radius: 60px;
   padding: 10px;
-  background-color: rgba(244, 239, 233, 0.8);
+  background-color: rgb(251, 234, 218);
 }
 
 /* 連結容器 */
@@ -327,6 +335,24 @@ section {
   background-color: rgb(79, 79, 79);
   color: rgb(244, 239, 233);
   box-shadow: inset 3px 3px 0px rgba(0, 0, 0, 0.8);
+}
+
+/* tag容器 */
+.tags-Container {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+  /* tag樣式 */
+}
+.tags-Container .tag {
+  border-radius: 30px;
+  background-color: rgb(251, 234, 218);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  line-height: 26px;
+  text-align: center;
+  padding: 5px 15px;
 }
 
 /* 首頁主內容 */
@@ -427,7 +453,7 @@ section {
   left: 0;
   top: 0;
   width: fit-content;
-  animation: scaleChange 5s 5s infinite;
+  animation: scaleChange 5s 0s infinite;
 }
 .index-banner .decorate-banner2 {
   position: absolute;
@@ -441,11 +467,11 @@ section {
   right: 0;
   top: 50%;
   width: fit-content;
-  animation: scaleChange 5s 4s infinite;
+  animation: scaleChange 5s 0s infinite;
 }
 .index-banner .banner {
   /* {`Yihui’s 個人網站`}方塊*/
-  width: 50%;
+  width: 900px;
   margin-top: 50px;
   animation: scaleRotate 5s 0s infinite;
 }
@@ -690,7 +716,7 @@ section {
   position: absolute;
   width: 100%;
   height: auto;
-  top: -140px;
+  top: -100px;
   left: 0;
   z-index: -1;
 }
@@ -734,9 +760,9 @@ section {
 
 .section-intro { /*  */
   max-width: 285px;
-  width: 25%;
+  width: 35%;
   min-height: 77vh;
-  background: linear-gradient(195deg, #FFEDCB 0%, #FFF5E9 15%, #FFD1B0 56%, #FFEDD0 90%);
+  background: linear-gradient(-45deg, rgba(178, 206, 210, 0.5) 15%, rgba(126, 176, 183, 0.5) 35%, rgba(125, 173, 181, 0.5) 60%, rgba(128, 183, 190, 0.5) 80%, rgba(12, 90, 103, 0.5) 100%);
   box-shadow: inset 1px 0 3px 0px rgba(0, 0, 0, 0.2);
   position: sticky;
   left: 0;
@@ -749,6 +775,8 @@ section {
 }
 .section-intro img {
   width: 118px;
+  border-radius: 90px;
+  border: 3px solid rgb(244, 239, 233);
 }
 .section-intro p {
   line-height: 45px;
@@ -782,7 +810,7 @@ section {
 .section-content .contentContainer {
   width: 100%;
   height: 100%;
-  background-color: rgba(233, 217, 204, 0.8);
+  background-image: linear-gradient(rgb(233, 217, 204) 0%, rgba(244, 239, 233, 0.8) 100%);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -812,4 +840,78 @@ section {
 }
 .portfolio-file img {
   width: 75%;
+}
+
+.aboutMe-Banner {
+  width: 100%;
+  height: fit-content;
+  background: url(../../images/aboutMe_bannerBg.png);
+  background-repeat: no-repeat;
+  background-position: center 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 50px;
+  padding-top: 75px;
+}
+.aboutMe-Banner .aboutMe-info {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  column-gap: 60px;
+  justify-content: center;
+  align-items: center;
+}
+.aboutMe-Banner .aboutMe-info .aboutMe-img {
+  width: 20%;
+  position: relative;
+}
+.aboutMe-Banner .aboutMe-info .aboutMe-img::before {
+  content: "衣櫃";
+  width: 65px;
+  height: 65px;
+  text-align: center;
+  color: #ffffff;
+  line-height: 65px;
+  font-weight: 600;
+  border-radius: 90px;
+  background-color: rgb(12, 90, 103);
+  position: absolute;
+  right: -30px;
+  bottom: 0;
+}
+.aboutMe-Banner .aboutMe-info .aboutMe-keyword {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 20px;
+}
+.aboutMe-Banner .aboutMe-info .aboutMe-keyword h1 {
+  font-size: 2rem;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 10px;
+}
+.aboutMe-Banner .aboutMe-intro {
+  width: 600px;
+  padding: 50px;
+  background-color: rgb(244, 239, 233);
+  border-radius: 30px;
+  box-shadow: -2px -4px 5px 0px rgba(0, 0, 0, 0.2);
+  color: rgb(11, 34, 40);
+  line-height: 30px;
+}
+
+.aboutMe-experience img {
+  width: 99%;
+}
+
+.aboutMe-skills .aboutMe-title {
+  width: 150px;
 }/*# sourceMappingURL=style_scss.css.map */
