--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -1,40 +1,45 @@
 @charset "UTF-8";
 /* UTF-8編碼確保文件中的中文字符或其他ASCII字符能夠被正確解析和顯示 */
 /* 導入字體 */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
 
 @import "reset";
 @import "_varible";
 /* 字大小 */
 h1 {
-    font-family: "SimSun", "Noto Serif TC", serif;
+    font-family: "Noto Serif TC", serif;
     font-size: 3.3rem;
     font-weight: 900;
     font-style: normal;
+    letter-spacing: 0.1rem;
 }
 h2 {
-    font-family: "SimSun", "Noto Serif TC", serif;
+    font-family:  "Noto Serif TC", serif;
     font-size: 2.25rem;
     font-weight: 700;
     font-style: normal;
+    letter-spacing: 0.1rem;
 }
 h3 {
     font-family: "Noto Serif TC", serif;
     font-size: 1.5rem;
     font-weight: 600;
     font-style: normal;
+    letter-spacing: 0.1rem;
 }
 p {
     font-family: "Noto Serif TC", serif;
-    font-size: 1.2rem;//1rem
-    font-weight: 400;
+    font-size: 1rem;//1rem
+    font-weight: 500;
     font-style: normal;
+    letter-spacing: 0.1rem;
 }
 small {
     font-family: "Noto Serif TC", serif;
     font-size: 0.75rem;
     font-weight: 200;
     font-style: normal;
+    letter-spacing: 0.1rem;
 }
 /* Global */
 * {
@@ -42,6 +47,9 @@ small {
 }
 a{
     font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: 0.05rem;
+    color: $font-color-wave;
     &:hover{
         color: $color-desert;
     }
@@ -52,10 +60,10 @@ body {
     width: 100vw;
     min-height: 1080px;
     height: auto;
-    background-color: #c8dbe1;
+    background-image: $background-color-Linear-shallowSea;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Noto Serif TC",
-        "SimSun", "Open Sans", "Helvetica Neue", sans-serif, "蘋方-繁", "PingFang TC", "黑體-繁", "Heiti TC",
+         "Open Sans", "Helvetica Neue", sans-serif, "蘋方-繁", "PingFang TC", "黑體-繁", "Heiti TC",
         "微軟正黑體", "Microsoft JhengHei", "Noto Sans TC";
     display: flex;
     flex-direction: column;
@@ -89,7 +97,7 @@ header {
     height: 50px;
     border-radius: 60px;
     padding: 10px;
-    background-color: rgba(244, 239, 233, 0.8);
+    background-color: $color-sunset;
 }
 /* 連結容器 */
 #menu {
@@ -174,10 +182,30 @@ section {
     }
     &:active {
         background-color: $btn-color-grey;
-        color: $font-color-white-s;
+        color: $font-color-white;
         box-shadow: inset 3px 3px 0px rgba(0, 0, 0, 0.8);
     }
 }
+/* tag容器 */
+.tags-Container{
+    width: auto;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+
+    /* tag樣式 */
+    .tag{
+        border-radius:$border-radius-tag;
+        background-color: $color-sunset;
+        border: 1px solid $box-shadow;
+        line-height: 26px;
+        text-align: center;
+        padding: 5px 15px;
+    }
+}
+// box-shadow: inset 0px 0px 3px 3px $box-shadow;
 /* 首頁主內容 */
 @keyframes scaleFloat{
     0%{
@@ -298,7 +326,7 @@ section {
         left: 0;
         top: 0;
         width: fit-content;
-        animation: scaleChange 5s 5s infinite;
+        animation: scaleChange 5s 0s infinite;
     }
     .decorate-banner2{
         position: absolute;
@@ -312,11 +340,11 @@ section {
         right:0;
         top: 50%;
         width: fit-content;
-        animation: scaleChange 5s 4s infinite;
+        animation: scaleChange 5s 0s infinite;
     }
     .banner {
         /* {`Yihui’s 個人網站`}方塊*/
-        width: 50%;
+        width: 900px;
         margin-top: 50px;
         animation: scaleRotate 5s 0s infinite;
     }
@@ -626,7 +654,7 @@ section {
         position: absolute;
         width: 100%;
         height: auto;
-        top: -140px;
+        top: -100px;
         left: 0;
         z-index: -1;
 
@@ -683,10 +711,12 @@ section {
 }
 .section-intro{/*  */
     max-width: 285px;
-    width: 25%;
+    width: 35%;
     min-height: 77vh;
     //height:100;
-    background: linear-gradient(195deg,#FFEDCB 0%,#FFF5E9 15%,#FFD1B0 56%,#FFEDD0 90%);
+    background: $background-color-Linear-deepSea;
+   
+
     box-shadow: inset 1px 0 3px 0px $box-shadow ;
     position: sticky;
     left: 0;
@@ -699,6 +729,8 @@ section {
     padding-top: 10vh;
     img{
         width: 118px;
+        border-radius: $border-radius-90;
+        border: 3px solid $background-color-beach-white;
     }
     p{
         line-height: 45px;
@@ -738,7 +770,7 @@ section {
     .contentContainer{
         width: 100%;
         height: 100%;
-        background-color: $background-color-beach-s;
+        background-image: $background-color-Linear-beach;
 
         display: flex;
         flex-direction: row;
@@ -780,3 +812,5 @@ section {
         width: 75%;
     }
 }
+
+@import "_aboutMe";
