--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -471,7 +471,7 @@ section {
 }
 .index-banner .banner {
   /* {`Yihui’s 個人網站`}方塊*/
-  width: 900px;
+  width: 50%;
   margin-top: 50px;
   animation: scaleRotate 5s 0s infinite;
 }
@@ -602,8 +602,8 @@ section {
 
 /* 裝介紹作品集的容器(img+div) */
 .index-portfolioInfo {
-  width: 100vw;
-  height: 60vh;
+  width: 100%;
+  height: 600px;
   background-image: url(../../images/index-portfolio.png);
   background-size: 85vw 28vw;
   background-repeat: no-repeat;
@@ -679,6 +679,7 @@ section {
   justify-content: center;
   align-items: center;
   row-gap: 19px;
+  padding-top: 38px;
   background-image: url(../../images/simple_learnNote.png);
   background-repeat: no-repeat;
   background-position: center;
