--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -254,7 +254,7 @@ header {
   height: 50px;
   border-radius: 60px;
   padding: 10px;
-  background-color: rgb(251, 234, 218);
+  background-color: rgb(255, 247, 219);
 }
 
 /* 連結容器 */
@@ -629,6 +629,7 @@ section {
   flex-direction: column;
   gap: 5vh;
   align-items: flex-end;
+  color: rgb(244, 239, 233);
 }
 
 /* (你能看到...)容器 */
