--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -97,7 +97,8 @@ header {
     height: 50px;
     border-radius: 60px;
     padding: 10px;
-    background-color: $color-sunset;
+    background-color: rgba( 255, 247 ,219 , 1);
+    //rgb(255 247 219)
 }
 /* 連結容器 */
 #menu {
@@ -539,6 +540,7 @@ section {
     flex-direction: column;
     gap: 5vh;
     align-items: flex-end;
+    color: $font-color-white;
 }
 /* (你能看到...)容器 */
 .index-portfolioInfo-content-infoTitle {
