--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -603,7 +603,7 @@ section {
 /* 裝介紹作品集的容器(img+div) */
 .index-portfolioInfo {
   width: 100%;
-  height: 600px;
+  height: auto;
   background-image: url(../../images/index-portfolio.png);
   background-size: 85vw 28vw;
   background-repeat: no-repeat;
@@ -613,6 +613,7 @@ section {
   align-items: center;
   justify-content: center;
   gap: 5vw;
+  padding: 15px 0px;
   /* 書 */
 }
 .index-portfolioInfo img {
@@ -627,9 +628,10 @@ section {
   height: auto;
   display: flex;
   flex-direction: column;
-  gap: 5vh;
+  gap: 2vh;
   align-items: flex-end;
   color: rgb(244, 239, 233);
+  margin: 10px 0px;
 }
 
 /* (你能看到...)容器 */
