--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -511,7 +511,7 @@ section {
 /* 裝介紹作品集的容器(img+div) */
 .index-portfolioInfo {
     width: 100%;
-    height: 600px;
+    height: auto;
     background-image: url(../../images/index-portfolio.png);
     background-size: 85vw 28vw;
     background-repeat: no-repeat;
@@ -522,6 +522,7 @@ section {
     align-items: center;
     justify-content: center;
     gap: 5vw;
+    padding: 15px 0px;
 
     /* 書 */
     img {
@@ -538,9 +539,10 @@ section {
 
     display: flex;
     flex-direction: column;
-    gap: 5vh;
+    gap: 2vh;
     align-items: flex-end;
     color: $font-color-white;
+    margin: 10px 0px;
 }
 /* (你能看到...)容器 */
 .index-portfolioInfo-content-infoTitle {
