--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -276,6 +276,8 @@ header {
 main {
   flex: 1;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
@@ -442,7 +444,7 @@ section {
 }
 /* banner */
 .index-banner {
-  height: 547px;
+  height: 447px;
   margin-bottom: 5vw;
   /* 定位裝飾 */
   position: relative;
@@ -598,6 +600,7 @@ section {
 .index-portfolio {
   height: auto;
   gap: 50px;
+  margin-bottom: 10vh;
 }
 
 /* 裝介紹作品集的容器(img+div) */
@@ -605,7 +608,7 @@ section {
   width: 100%;
   height: auto;
   background-image: url(../../images/index-portfolio.png);
-  background-size: 85vw 28vw;
+  background-size: 70% 100%;
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
