--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -97,7 +97,7 @@ header {
     height: 50px;
     border-radius: 60px;
     padding: 10px;
-    background-color: rgba( 255, 247 ,219 , 1);
+    background-color:$color-beach-white-s;
     //rgb(255 247 219)
 }
 /* 連結容器 */
