--- a/stylesheet/_aboutMe.scss
+++ b/stylesheet/_aboutMe.scss
@@ -71,6 +71,11 @@
     }
 }
 
+.aboutMe-content{
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+}
 .aboutMe-experience{
     img{
         width: 99%;
@@ -78,7 +83,28 @@
 }
 
 .aboutMe-skills{
+    width: 100%;
+    height: auto;
+    padding-left: 20px;
     .aboutMe-title{
-        width: 150px;
+        width: 130px;
+        padding-bottom: 20px;
+        img{
+            width: 60%;
+        }
+    }
+    .skills-container{
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+
+        a{
+            &:hover{
+                scale: 110%;
+            }
+        }
+        img{
+            width: 80%;
+        }
     }
 }
