--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -254,7 +254,7 @@ header {
   height: 50px;
   border-radius: 60px;
   padding: 10px;
-  background-color: rgb(255, 247, 219);
+  background-color: rgba(244, 239, 233, 0.8);
 }
 
 /* 連結容器 */
@@ -915,10 +915,36 @@ section {
   line-height: 30px;
 }
 
+.aboutMe-content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+}
+
 .aboutMe-experience img {
   width: 99%;
 }
 
+.aboutMe-skills {
+  width: 100%;
+  height: auto;
+  padding-left: 20px;
+}
 .aboutMe-skills .aboutMe-title {
-  width: 150px;
+  width: 130px;
+  padding-bottom: 20px;
+}
+.aboutMe-skills .aboutMe-title img {
+  width: 60%;
+}
+.aboutMe-skills .skills-container {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+}
+.aboutMe-skills .skills-container a:hover {
+  scale: 110%;
+}
+.aboutMe-skills .skills-container img {
+  width: 80%;
 }/*# sourceMappingURL=style_scss.css.map */
