.simple-learnNoteComponent //padding-top: 38px;

--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -599,7 +599,7 @@ section {
     justify-content: center;
     align-items: center;
     row-gap: 19px;
-    padding-top: 38px;
+    //padding-top: 38px;
    
     background-image: url(../../images/simple_learnNote.png);
     background-repeat: no-repeat;
