--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -561,8 +561,7 @@ section {
   scale: 100%;
   width: auto;
   height: auto;
-  left: -20%;
-  top: -40%;
+  top: 0;
   z-index: -1;
 }
 @media (max-width: 1440px) {
