--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -463,8 +463,9 @@ section {
                 scale: 100%;
                 width: auto;
                 height: auto;
-                left: -20%;
-                top: -40%;
+                //left: -20%;
+                top: 0;
+                //top: -40%;
                 z-index: -1;
                 @media (max-width:1440px) {
                     left: -30%;
