.content-intro{ &::after { => top: -110px;

--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -561,7 +561,7 @@ section {
   scale: 100%;
   width: auto;
   height: auto;
-  top: 0;
+  top: -110px;
   z-index: -1;
 }
 @media (max-width: 1440px) {
