--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -464,7 +464,7 @@ section {
                 width: auto;
                 height: auto;
                 //left: -20%;
-                top: 0;
+                top: -110px;
                 //top: -40%;
                 z-index: -1;
                 @media (max-width:1440px) {
