--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -294,7 +294,7 @@ section {
         
     }
     50%{
-        transform: translate(15vw,10vw);
+        transform: translate(15vw,11vw);
         z-index: 1;
         
     }
@@ -313,6 +313,7 @@ section {
 .index-banner {
     height: 447px;
     margin-bottom: 5vw;
+    margin-top: 50px;
 
     /* 定位裝飾 */
     position: relative;
@@ -348,7 +349,7 @@ section {
     }
     .banner {
         /* {`Yihui’s 個人網站`}方塊*/
-        width: 50%;
+        width: 45%;
         margin-top: 50px;
         animation: scaleRotate 5s 0s infinite;
     }
