--- a/stylesheet/css/style_scss.css
+++ b/stylesheet/css/style_scss.css
@@ -488,7 +488,7 @@ section {
   border-radius: 10px;
   box-shadow: inset -5px -5px 4px 0px rgba(8, 63, 72, 0.3);
   right: 35%;
-  top: 5%;
+  top: 0;
   z-index: 1;
   animation: runCircle1 10s 0s infinite;
 }
