--- a/stylesheet/style_scss.scss
+++ b/stylesheet/style_scss.scss
@@ -367,7 +367,7 @@ section {
         
 
         right: 35%;
-        top: 5%;
+        top: 0;
         z-index: 1;
 
         animation: runCircle1 10s 0s infinite;
